<resources>
    <string name="product_title">Titre</string>
    <string name="product_description">Texte secondaire</string>

    <string name="app_name">AperoBox</string>4
    <string name="aperobox">Apéro Box</string>

    <!-- Connexion / Inscription -->
    <string name="nom_utilisateur">Nom d\'utilisateur</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="email">Adresse email</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmation_mot_de_passe">Répétez le mot de passe</string>
    <string name="gsm">Numéro de téléphone portable</string>
    <string name="telephone">Numéro de téléphone fixe</string>
    <string name="rue">Rue</string>
    <string name="numero">Numéro</string>
    <string name="localite">Localité</string>
    <string name="code_postal">Code postal</string>
    <string name="pays">Pays</string>

    <!-- Title/button/gen -->
    <string name="connexion_title">Connexion</string>
    <string name="deconnection_title">Déconnexion</string>
    <string name="inscription_title">Inscription</string>
    <string name="compte_title">Compte</string>
    <string name="inscription">S\'inscrire</string>
    <string name="connexion">Se connecter</string>
    <string name="deconnection">Se déconnecter</string>
    <string name="accueil_title">Accueil</string>
    <string name="box_title">Box</string>
    <string name="box_personnalise_title">Box personnalisée</string>
    <string name="commentaire_title">Commentaire</string>




    <!-- Option Fragment -->
    <string name="switch_Dark_Mode">Mode sombre</string>

    <!-- BoxFragment -->
    <string name="box_fragment_box_personnalise_name">Box Personnalisée</string>
    <string name="box_fragment_box_personnalise_description">Une box qui ne contient que ce que vous désirez.</string>
    <string name="box_fragment_box_error_chargement_api_name">Box (erreur)</string>
    <string name="box_fragment_box_error_chargement_api_description">Une erreur est survenue lors de l\'accès aux données.\nEn attendant son retour, voici une petite Joke de papa</string>
    <string name="box_fragment_box_prix_gratuit">Gratuit !</string>
    <string name="box_fragment_produit_title">Produits</string>
    <string name="box_fragment_produit_nom">produits</string>
    <string name="box_fragment_produit_quantite">Quantité :</string>
    <string name="box_fragment_box_button_ajout_panier">Ajouter au panier</string>
    <string name="box_fragment_box_personnalise_empty_quantite">Vous devez ajouter au moins un produit à votre box personnalisée pour pouvoir la commander</string>
    <string name="box_fragment_box__empty_quantite">Vous devez avoir une quantité de box supérieure à 0 et inférieure ou égale à 25 pour pouvoir commander</string>
    <string name="box_fragment_connection_obligatoire">Vous devez être connecté pour ajouter une box à votre panier</string>
    <string name="box_fragment_box_ajouter">Box ajoutée(s)</string>
    <string name="box_fragment_produits_ajouter">Produit(s) ajouté(s)</string>
    <string name="box_fragment_commentaire">Commentaires</string>
    <string name="box_fragment_moins">-</string>
    <string name="box_fragment_plus">+</string>
    <string name="box_fragment_zero">0</string>

    <!-- CommentaireFragment -->
    <string name="commentaire_fragment_error_load_commentaire">Une erreur est survenue lors du chargement des commentaires.</string>
    <string name="commentaire_fragment_edit_text_envoyer_commentaire">Envoyez un commentaire.</string>
    <string name="commentaire_fragment_error_ajout_commentaire">Une erreur est survenue lors de l\'ajout de votre commentaire.</string>
    <string name="commentaire_fragment_error_duplication">Vous ne pouvez ajouter 2 fois le même commentaire.</string>
    <string name="commentaire_fragment_aucun_commentaire">Aucun commentaire.</string>
    <string name="commentaire_fragment_error_vide">Ajoutez un texte au commentaire</string>

    <!-- AProposFragment -->
    <string name="apropos_message">Application créée et inventée par deux étudiants d\'IG et trois étudiants de marketing de l\'HENALLux IESN de Namur</string>

    <!-- ContactFragment -->
    <string name="contact_nous_contactez">Contactez-nous</string>
    <string name="contact_mail">aperobox.henallux@outlook.com</string>
    <string name="contact_mail_sujet">aperoBox_contact_us</string>
    <string name="contact_mail_chooser">Boite mail</string>

    <!-- Error messages -->
    <string name="error_login_api">Impossible d\'accéder aux serveurs</string>
    <string name="error_no_internet">Une connexion internet est nécessaire.</string>
    <string name="invalid_username_password">Nom d\'utilisateur ou mot de passe incorrect</string>
    <string name="invalid_username">Nom d\'utilisateur inconnu</string>
    <string name="invalid_username_length">3 caractères minimum et 30 maximum</string>
    <string name="invalid_password_length">3 caractères minimum et 20 maximum</string>
    <string name="invalid_password">Mauvais mot de passe</string>
    <string name="invalid_conf_password">Mots de passe différents</string>
    <string name="login_failed">Échec de la connexion</string>
    <string name="login_success">Succès de la connexion</string>
    <string name="login_token_expire">Session expirée. Veuillez-vous reconnecter</string>
    <string name="invalid_date_naissance">La date de naissance n\'est pas valable (minimum 13 ans)</string>
    <string name="invalid_nom">2 caractères minimum et 50 maximum</string>
    <string name="invalid_prenom">2 caractères minimum et 50 maximum</string>
    <string name="invalid_mail">Adresse mail invalide (example@hotmail.com) </string>
    <string name="invalid_telephone">Non obligatoire ou 9 chiffres sont requis</string>
    <string name="invalid_gsm">10 chiffres sont requis</string>
    <string name="invalid_rue">2 caractères minimum et 100 maximum</string>
    <string name="invalid_numero">1 à 5 chiffres requis</string>
    <string name="invalid_localite">2 caractères minimum et 20 maximum</string>
    <string name="invalid_codePostal">1 à 7 chiffres requis</string>

    <string name="box_grid_fragment_erreur_load_boxs">Une erreur est survenue lors du chargement de toutes les box</string>
    <string name="box_fragment_erreur_load_box">Une erreur est survenue lors du chargement de la box</string>
    <string name="box_fragment_erreur_load_produits">Une erreur est survenue lors du chargement des produits</string>
    <string name="inscription_fragment_erreur_inscription">Une erreur est survenue lors de votre inscription.</string>
    <string name="inscription_fragment_erreur_ajout_adresse">Une erreur est survenue lors de l\'ajout de votre adresse.</string>
    <string name="connexion_fragment_erreur_connexion">Une erreur est survenue lors de votre connexion.</string>
    <string name="chargement_lost_connection">La connection internet s\'est interrompue durant le chargement d\'un/plusieurs élément(s).\n Veuillez vérifier votre connection internet, revenez en arrière et réessayez</string>
    <string name="retry">Veuillez vérifier votre connection internet, revenez en arrière et réessayez</string>

    <string name="inscription_fragment_success_inscription">Inscription réussie</string>
    <string name="inscription_fragment_error_unique_field">Nom d\'utilisateur et/ou adresse email existe(nt) déjà dans la base de données</string>
    <string name="inscription_fragment_error_adresse">Erreur de l\'inscription, l\'addresse n\'est pas conforme</string>

    <!-- Backdrop menu -->
    <string name="menu_accueil">Accueil</string>
    <string name="menu_box_perso">Box personnalisée</string>
    <string name="menu_panier">Panier</string>
    <string name="menu_options">Options</string>
    <string name="menu_a_propos">À propos</string>
    <string name="menu_nous_contacter">Contactez-nous</string>
    <string name="compte">Connexion</string>

    <string name="deconnecte">Déconnecté</string>

    <!-- PanierFragment -->
    <string name="panier_fragment_box_name">Box : </string>
    <string name="panier_fragment_box_personnalise_name">Box Personnalisée : </string>
    <string name="panier_fragment_box_vide">Box : Aucune box dans le panier</string>
    <string name="panier_fragment_produit_vide">Box Personnalisée : Aucun produit dans le panier</string>
    <string name="panier_fragment_votre_panier">Votre panier : </string>
    <string name="panier_fragment_button_acheter">Commander le panier</string>
    <string name="panier_fragment_prix_total">Prix total (TVAC): </string>
    <string name="panier_fragment_promotion_total">Promotion totale : </string>
    <string name="panier_fragment_panier_vide">Aucun article dans votre panier !</string>
    <string name="panier_fragment_commande_save">Commande enregistrée</string>
    <string name="panier_fragment_erreur_save">Erreur lors de l\'enregistrement du panier</string>
    <string name="panier_fragment_sous_total">Sous-total : </string>
    <string name="panier_fragment_commande_annule">Commande annulée</string>
    <string name="panier_fragment_commande_confirmation">Voulez-vous commander votre panier ?</string>
    <string name="panier_fragment_commande_oui">Oui</string>
    <string name="panier_fragment_commande_non">Non</string>
    <string name="panier_fragment_button_clearAll">Supprimer le panier</string>
    <string name="panier_fragment_panier_supprime">Panier supprimé</string>
    <string name="panier_fragment_connection_obligatoire">Vous devez être connecté pour commander</string>


    <!-- JokeENtry -->
    <string name="joke_entry_erreur_read">Erreur dans la lecteur des Joke de Papa</string>
    <string name="joke_entry_erreur_close">Erreur fermeture du fichier des Joke de Papa</string>

</resources>
