<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AperoBox.Button.TextButton"
        android:id="@+id/menu_accueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_accueil" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AperoBox.Button.TextButton"
        android:id="@+id/menu_box_personnalise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_box_perso" />


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AperoBox.Button.TextButton"
        android:id="@+id/menu_a_propos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_a_propos" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AperoBox.Button.TextButton"
        android:id="@+id/menu_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_options" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AperoBox.Button.TextButton"
        android:id="@+id/menu_nous_contactez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_nous_contacter" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AperoBox.Button.TextButton"
        android:id="@+id/menu_compte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compte" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AperoBox.Button.TextButton"
        android:id="@+id/menu_panier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_panier" />

</merge>